--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
     <h1>Welcome to My Website!</h1>
-    <p>This is a sample paragraph.</p>
+    <p>This is a sample paragraph. I am going to try to make the business using this website... so far I have high hopes!
+        I'm considering making the domain kncthub.com so for Konnect Hub. What do you think?
+    </p>
 </body>
 </html>
