--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My First HTML Page</title>
+    <title>KNCT - HUB</title>
 </head>
 <body>
     <h1>Welcome to My Website!</h1>
     <p>This is a sample paragraph. I am going to try to make the business using this website... so far I have high hopes!
-        I'm considering making the domain kncthub.com so for Konnect Hub. What do you think?
+        I'm considering making the domain kncthub.com so Konnect Hub. What do you think?
     </p>
 </body>
 </html>
