--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>KNCT - HUB</title>
 </head>
 <body>
-    <h1>Welcome to My Website!</h1>
-    <p>This is a sample paragraph. I am going to try to make the business using this website... so far I have high hopes!
-        I'm considering making the domain kncthub.com so Konnect Hub. What do you think?
+    <h1>Welcome to K - Hub, empowering buyers for competitive prices!</h1>
+    <p>I am going to try to make the business using this domain... so far I have high hopes!
+        
+        
     </p>
 </body>
 </html>
