--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <body>
     <h1>Welcome to K - Hub, empowering buyers for competitive prices!</h1>
     <p>I am going to try to make the business using this domain... so far I have high hopes!
-        
+
+        Beginning with an MVP (Minimum Viable Product ) to learn as much as possible from a minimium investment and use what is learned as momentum to continue building.
         
     </p>
 </body>
