--- a/index.html
+++ b/index.html
@@ -7,8 +7,40 @@
     <h1>Welcome to K - Hub, empowering buyers for competitive prices!</h1>
     <p>I am going to try to make the business using this domain... so far I have high hopes!
 
-        Beginning with an MVP (Minimum Viable Product ) to learn as much as possible from a minimium investment and use what is learned as momentum to continue building.
-        
+        <p>
+            Beginning with an MVP (Minimum Viable Product ) to learn as much as possible from a minimium investment and use what is learned as momentum to continue building.
+        </p>
+    </p>
+    <p>
+        <p><h2> S.W.O.T Analysis</h2></p>
+        <h3> Strenghts</h3>
+        <p>1. Exceptionally Competitive prices</p>
+<p>2. Ability to share desired items for purchase on social platforms</p>
+<p>3. 24/7 customer support</p>
+<p>4. Peer networking /Unite people with common purchasing behavior</p>
+<p>5. Address socioeconomic issues (Student debts, high home prices, unstable inflation)</p>
+
+<p><h2>Weaknesses</h2></p>
+<p>1. Limited brand awareness</p>
+<p>2. Dependence on technology (Cyber threats, technical issues, cost, skills gap)</p>
+<p>3. Reliance on manufacturers and suppliers</p>
+<p>4. Shipping</p>
+<p> High competition in the e-commerce industry</p>
+
+<p><h2>Opportunities</h2></p>
+<p>1. Expenad into new market areas (B2B)</p>
+<p>2. Introduction of new product categories and industries</p>
+<p>3. Partnership with influencers for marketing</p>
+<p>4. Integration of AI for personalized </p>
+<p>5. Adoption of sustainable and ethical practices for competitive advantage</p>
+    </p>
+
+<p><h2>Threats</h2></p>
+<p>1. Economic downturns impacting customer spending</p>
+<p>2. Changes in trade regulations affecting shipping</p>
+<p>3. Cybersecurity threats and data breaches/ Data privacy and compliance</p>
+<p>4. Competitor expansion and market saturation</p>
+<p>5. Poor feedback and reputation damage on social media</p>
     </p>
 </body>
 </html>
