--- a/index.html
+++ b/index.html
@@ -109,28 +109,25 @@
 
         .features {
             padding: 4rem 5%;
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 2rem;
+            text-align: center;
             background-color: #111;
         }
 
-        .feature-card {
-            text-align: center;
-            padding: 2rem;
-            border: 1px solid #1e90ff; /* Blue border for trust and professionalism */
-            transition: border-color 0.3s; /* Smooth transition for hover effect */
+        .features h2 {
+            font-size: 2.5rem;
+            margin-bottom: 2rem;
+            color: #1e90ff; /* Blue heading for trust and innovation */
         }
 
-        .feature-card:hover {
-            border-color: #00bfff; /* Lighter blue border on hover for calmness */
+        .feature-item {
+            margin-bottom: 1.5rem;
         }
 
-        .feature-card h3 {
+        .feature-item h3 {
             color: #fff; /* White for headings */
         }
 
-        .feature-card p {
+        .feature-item p {
             color: #ccc; /* Light grey for smaller text */
         }
 
@@ -205,22 +202,23 @@
     </section>
 
     <section id="features" class="features">
-        <div class="feature-card">
+        <h2>Why Choose KNCT-HUB?</h2>
+        <div class="feature-item">
             <i class="fas fa-tag fa-2x"></i>
             <h3>Competitive Pricing</h3>
             <p>Always find the best deals in the market</p> <!-- Light grey text -->
         </div>
-        <div class="feature-card">
+        <div class="feature-item">
             <i class="fas fa-headset fa-2x"></i>
             <h3>24/7 Support</h3>
             <p>Round-the-clock customer service</p> <!-- Light grey text -->
         </div>
-        <div class="feature-card">
+        <div class="feature-item">
             <i class="fas fa-share-alt fa-2x"></i>
             <h3>Social Sharing</h3>
             <p>Share finds with your network</p> <!-- Light grey text -->
         </div>
-        <div class="feature-card">
+        <div class="feature-item">
             <i class="fas fa-users fa-2x"></i>
             <h3>Community Driven</h3>
             <p>Connect with like-minded shoppers</p> <!-- Light grey text -->
